flux/infrastructure/webapps/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: webapps
  labels:
    app: searxng
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`searx.becklab.cloud`) && PathPrefix(`/.well-known/acme-challenge/`)
      kind: Rule
      priority: 10
      services:
        - name: searxng
          port: 80
    - match: Host(`searx.becklab.cloud`)
      kind: Rule
      priority: 5
      middlewares:
        - name: sso-admin-chain
          namespace: identity
      services:
        - name: searxng
          port: 80
  tls:
    secretName: searxng-tls
